--- a/index.html
+++ b/index.html
@@ -3,24 +3,19 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Page</title>
-    <style>
-        h1 {
-            color: springgreen;
-            text-align: center;
-        }
-        p {
-            color:royalblue;
-        }
-        a{
-            text-decoration: none;
-            color:darkgreen;
-        }
-        
-    </style>
+    <link rel="stylesheet" href="css/first.css">
 </head>
 <body>
-    <img src="images/free.jpg" alt="birds leaving a jar" width="25%">
-    <h1>FREEDOM</h1>
+  <header>
+		<nav>
+      <img id="logo" src="images/Gray_Minimal_Pencil_Creative_Studio_Logo-removebg-preview.png" alt="pencil">
+			<a href="Third page.html" >Third page</a>
+			<a href="second page.html" >Second page</a>
+		</nav>
+  </header>
+  <div>
+		<img src="images/free.jpg" alt="birds leaving a jar" id="img">
+    <h1 id="head">FREEDOM</h1>
     <hr/>
     <p>
         Freedom, generally, is having the ability to act or change without constraint. 
@@ -34,8 +29,6 @@
         In physics or engineering, the mathematical concept may also be applied to a body or system constrained by a set of equations, 
         whose degrees of freedom describe the number of independent motions that are allowed to it.
     </p>
-    <a href="second page.html">Go to second page</a>
-    <br>
-    <a href="Third page.html">Go to third page</a>
+  </div>
 </body>
 </html>
