--- a/second page.html
+++ b/second page.html
@@ -3,37 +3,30 @@
     <head>
         <title>Welcome to the second page</title>
         <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+        <link rel="stylesheet" href="css/second.css">
     </head>
-    <style>
-        body{
-            background-color: silver;
-        }
-        h1{
-            color: olivedrab;
-        }
-        a{
-            text-decoration: underline teal;
-            color: black;
-            font-size: 20px;
-        }
-    </style>
     <body>
-        <h1>LIBERTY</h1>
-        <p>
-            Broadly speaking, liberty is the ability to do as one pleases, or a right or immunity enjoyed by prescription or by grant (i.e. privilege). 
-            It is a synonym for the word freedom. In modern politics, liberty is the state of being free within society from control or oppressive restrictions imposed by authority on one's way of life, behaviour, or political views.
-            In philosophy, liberty involves free will as contrasted with determinism. In theology, liberty is freedom from the effects of "sin, spiritual servitude, [or] worldly ties".
-            Sometimes liberty is differentiated from freedom by using the word "freedom" primarily, 
-            if not exclusively, to mean the ability to do as one wills and what one has the power to do; and using the word "liberty" to mean the absence of arbitrary restraints, taking into account the rights of all involved. 
-            In this sense, the exercise of liberty is subject to capability and limited by the rights of others. Thus liberty entails the responsible use of freedom under the rule of law without depriving anyone else of their freedom. 
-            Freedom is more broad in that it represents a total lack of restraint or the unrestrained ability to fulfill one's desires. For example, a person can have the freedom to murder, but not have the liberty to murder, 
-            as the latter example deprives others of their right not to be harmed. Liberty can be taken away as a form of punishment. In many countries, people can be deprived of their liberty if they are convicted of criminal acts.
-        </p>
+			<nav>
+				<ul class="menu">
+					<li><a href="index.html">First page</a></li>
+					<li><a href="Third page.html">Third page</a></li>
+				</ul>
+			</nav>
+		
+      <div>
+				<h1>LIBERTY</h1>
+				<img src="images/liberty.jpg">
+				<p>
+						Broadly speaking, liberty is the ability to do as one pleases, or a right or immunity enjoyed by prescription or by grant (i.e. privilege). 
+						It is a synonym for the word freedom. In modern politics, liberty is the state of being free within society from control or oppressive restrictions imposed by authority on one's way of life, behaviour, or political views.
+						In philosophy, liberty involves free will as contrasted with determinism. In theology, liberty is freedom from the effects of "sin, spiritual servitude, [or] worldly ties".
+						Sometimes liberty is differentiated from freedom by using the word "freedom" primarily, 
+						if not exclusively, to mean the ability to do as one wills and what one has the power to do; and using the word "liberty" to mean the absence of arbitrary restraints, taking into account the rights of all involved. 
+						In this sense, the exercise of liberty is subject to capability and limited by the rights of others. Thus liberty entails the responsible use of freedom under the rule of law without depriving anyone else of their freedom. 
+						Freedom is more broad in that it represents a total lack of restraint or the unrestrained ability to fulfill one's desires. For example, a person can have the freedom to murder, but not have the liberty to murder, 
+						as the latter example deprives others of their right not to be harmed. Liberty can be taken away as a form of punishment. In many countries, people can be deprived of their liberty if they are convicted of criminal acts.
+				</p>
+      </div> 
         
-        <img src="images/liberty.jpg">
-        <br>
-        <a href="Third page.html">Go to third page</a>
-        <br>
-        <a href="index.html">Go to first page</a>
     </body>
 </html>
