--- a/Third page.html
+++ b/Third page.html
@@ -5,39 +5,21 @@
             Welcome to the last page
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <style>
-            h1{
-                color: red;
-                text-align: center;
-            }
-            h2{
-                text-align: center;
-                color: orange;
-            }
-            h3{
-                text-align: center;
-                color:yellow;
-            }
-            a{
-                font-size: 40px;
-                text-decoration: none;
-                color: thistle;
-            }
-            p{
-                background-color:turquoise;
-                text-align: center;
-                font-size: 50px;;
-            }
-        </style>
+        <link rel="stylesheet" href="css/third.css">
     </head>
     <body>
+      <nav>
+				<ul class="container">
+					<li><a href="index.html">First page</a></li>
+					<li><a href="second page.html">Second page</a></li>
+				</ul>
+			</nav>
+			<div>
         <h1>You are in the last page of this assignment</h1>
         <h2>Would you like to go back?</h2>
         <h3>I know you would</h3>
+				<p>Thank You for visiting this page, Bye</p>
+      </div>
         
-        <a href="index.html">Go to first page</a>
-        <br/>
-        <a href="second page.html">Go to second page</a>
-        <p>Thank You for visiting this page, Bye</p>
     </body>
 </html>
