Three webpages of random things

--- a/Third page.html
+++ b/Third page.html
@@ -15,10 +15,36 @@
 				</ul>
 			</nav>
 			<div>
-        <h1>You are in the last page of this assignment</h1>
+        <h1 id="name">ANNE FRANK</h1>
+        <p>Annelies Marie "Anne" Frank (German pronunciation: [ˈanəˌliːs maˈʁiː ˈʔanə ˈfʁaŋk] (About this soundlisten), 
+          Dutch: [ˈɑnəˌlis maːˈri ˈʔɑnə ˈfrɑŋk]; 12 June 1929 – February or March 1945) was a German-Dutch diarist of 
+          Jewish heritage. One of the most discussed Jewish victims of the Holocaust, she gained fame posthumously with 
+          the 1947 publication of The Diary of a Young Girl (originally Het Achterhuis in Dutch; English: The Secret Annex)
+          , in which she documents her life in hiding from 1942 to 1944, during the German occupation of the Netherlands 
+          in World War II. It is one of the world's best-known books and has been the basis for several plays and films.
+        </p>
+        <p> Born in Frankfurt, Germany, she lived most of her life in or near Amsterdam, Netherlands, having moved there 
+          with her family at the age of four and a half when Adolf Hitler and the Nazi Party gained control over Germany. 
+          Born a German national, she lost her citizenship in 1941 and thus became stateless. By May 1940, the Franks were 
+          rapped in Amsterdam by the German occupation of the Netherlands. As persecutions of the Jewish population 
+          increased in July 1942, the Franks went into hiding in some concealed rooms behind a bookcase in the building 
+          where Anne's father, Otto Frank, worked. From then until the family's arrest by the Gestapo in August 1944, 
+          she kept a diary she had received as a birthday present, and wrote in it regularly. Following their arrest, 
+          the Franks were transported to concentration camps. On November 1 1944,[2] Anne and her sister, Margot, 
+          were transferred from Auschwitz to Bergen-Belsen concentration camp, where they died (probably of typhus) 
+          a few months later. They were originally estimated by the Red Cross to have died in March, with Dutch 
+          authorities setting 31 March as their official date of death, but research by the Anne Frank House in 2015 
+          suggests it is more likely that they died in February.</p>
+        <ul>
+          <li><img src="images/anna frank.jpeg" width="50%"></li>
+          <li><img src="images/anna frank house.jpeg" width=50%></li>
+          <li><img src="images/anna frank book.jpeg" width="30%" height="350px"></li>
+        </ul>
+        
+        <h1 id="last">You are in the last page of this assignment</h1>
         <h2>Would you like to go back?</h2>
         <h3>I know you would</h3>
-				<p>Thank You for visiting this page, Bye</p>
+				<p id="end">Thank You for visiting this page, Bye</p>
       </div>
         
     </body>
