--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 <body>
   <header>
 		<nav>
-      <img id="logo" src="images/Gray_Minimal_Pencil_Creative_Studio_Logo-removebg-preview.png" alt="pencil">
-			<a href="Third page.html" >Third page</a>
-			<a href="second page.html" >Second page</a>
+      <div id="logo">...the power or right to act, speak, or think as one wants.</div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="Third page.html" >Third page</a></li>
+        <li><a href="second page.html" >Second page</a></li>
+      </ul>
 		</nav>
   </header>
+
   <div>
-		<img src="images/free.jpg" alt="birds leaving a jar" id="img">
+		<img src="images/aditya-saxena-_mIXHvl_wzA-unsplash.jpg" alt="birds leaving a jar" id="img">
     <h1 id="head">FREEDOM</h1>
     <hr/>
-    <p>
+    <p id="para">
         Freedom, generally, is having the ability to act or change without constraint. 
         Something is "free" if it can change easily and is not constrained in its present state. 
         In philosophy and religion, it is associated with having free will and being without undue or unjust constraints, or enslavement, 
@@ -29,6 +33,16 @@
         In physics or engineering, the mathematical concept may also be applied to a body or system constrained by a set of equations, 
         whose degrees of freedom describe the number of independent motions that are allowed to it.
     </p>
+    <p>In political discourse, political freedom is often associated with liberty and autonomy in the sense of 
+      "giving oneself their own laws", and with having rights and the civil liberties with which to exercise them 
+      without undue interference by the state. Frequently discussed kinds of political freedom include freedom of 
+      assembly, freedom of association, freedom of choice, and freedom of speech. In some circumstances, particularly when
+      discussion is limited to political freedoms, the terms "freedom" and "liberty" tend to be used interchangeably.
+      Elsewhere, however, subtle distinctions between freedom and liberty have been noted.[3] John Stuart Mill, 
+      differentiated liberty from freedom in that freedom is primarily, if not exclusively, the ability to do as one wills 
+      and what one has the power to do; whereas liberty concerns the absence of arbitrary restraints and takes into account 
+      he rights of all involved. As such, the exercise of liberty is subject to capability and limited by the rights of 
+      others.</p>
   </div>
 </body>
 </html>
