--- a/second page.html
+++ b/second page.html
@@ -6,16 +6,19 @@
         <link rel="stylesheet" href="css/second.css">
     </head>
     <body>
+		<header>
 			<nav>
 				<ul class="menu">
 					<li><a href="index.html">First page</a></li>
 					<li><a href="Third page.html">Third page</a></li>
 				</ul>
 			</nav>
-		
+		</header>
       <div>
 				<h1>LIBERTY</h1>
-				<img src="images/liberty.jpg">
+
+				<img src="images/kit-suman-Waz4K1fHzCA-unsplash.jpg" id="img">
+				<img src="images/julius-drost-CpAzDEut7Q4-unsplash.jpg" id="img2">
 				<p>
 						Broadly speaking, liberty is the ability to do as one pleases, or a right or immunity enjoyed by prescription or by grant (i.e. privilege). 
 						It is a synonym for the word freedom. In modern politics, liberty is the state of being free within society from control or oppressive restrictions imposed by authority on one's way of life, behaviour, or political views.
